# scylla

./: .ccls  .gitignore  .gitmodules  .tmuxinator.yml  CMakeLists.txt  README.md  bidirectional_connect.sh  compile_commands.json  connect_pi.sh  env.sh  makefile  platformio.ini  requirements.txt  temp.sh
.cache/clangd/index/: LaserScan.hpp.6FA4162BDC96F37A.idx  ScanPoint.hpp.85AB95C9ACED03E8.idx  abs_rxtx.h.FF54142BF2528C4E.idx  arch_linux.h.2C0A709FA602A90D.idx  assert.h.43CE431D84BEDCFE.idx  byteops.h.E9155E33A3AC90E5.idx  byteorder.h.1AE7CDE53511CE6B.idx  dataunnpacker_commondef.h.799649E45EFEBFF9.idx  dataunnpacker_internal.h.BFA21F2162CE368C.idx  dataunpacker.cpp.032FECC03F566131.idx  dataunpacker.h.07A6F7A32628550C.idx  dataupacker_namespace.h.D768771BF0E19A38.idx  event.h.50322377245AF4A5.idx  handler_capsules.cpp.D6833B423E0C806F.idx  handler_capsules.h.50D7136460848524.idx  handler_hqnode.cpp.54463BD56810579B.idx  handler_hqnode.h.92C88FFBF86F7AD4.idx  handler_normalnode.cpp.BAD44510BF7A9F42.idx  handler_normalnode.h.AC883F85CC6383F9.idx  lidar.cpp.CC91E888F7AFB0B7.idx  lidar.hpp.522298E69961493B.idx  locker.h.1D5B1877C70D68F8.idx  main.cpp.58A3CFED2C06F7CA.idx  main.cpp.61E11ECFED1B7101.idx  net_serial.cpp.C9B16574C02E52DF.idx  net_serial.h.3E608FC7A5C53D52.idx  net_socket.cpp.B81E284B68642240.idx  probability_grid.cpp.1E5090F14AE2F972.idx  probability_grid.hpp.640AE8CFBAFE145B.idx  probability_grid.hpp.F2742A4B7F1FCAFB.idx  rplidar.h.BFB8AB69673C1F12.idx  rplidar_cmd.h.028F4F47CE7A5AAC.idx  rplidar_driver.cpp.25EEE74EB6E1600E.idx  rplidar_driver.h.9649BC4532C8D6AD.idx  rplidar_protocol.h.0B02F1AC0FFEC2FE.idx  scan_filter.cpp.1CD255BDEFBF9495.idx  scan_filter.hpp.DFADB4D25C654C1C.idx  sdkcommon.h.9C064F1117BB5520.idx  sl_async_transceiver.cpp.3561DC9C14647792.idx  sl_async_transceiver.h.FA1814DE46017715.idx  (+22 more)
common/: CMakeLists.txt
common/grid/: CMakeLists.txt
common/grid/include/common/: probability_grid.hpp
common/grid/src/: probability_grid.cpp
common/icp/: CMakeLists.txt
common/icp/include/common/: icp.hpp
common/icp/src/: icp.cpp
common/quadtree/: CMakeLists.txt
common/quadtree/include/common/: quadtree.hpp
common/quadtree/src/: quadtree.cpp
include/messages/: LaserScan.hpp  ScanPoint.hpp
lcm_types/: CMakeLists.txt  drive_command_t.lcm  flow_t.lcm  imu_t.lcm  laser_scan.lcm  lidar_t.lcm  mag_t.lcm  scan_point.lcm  steer_command.lcm
nodes/: CMakeLists.txt
nodes/control/: CMakeLists.txt  main.cpp
nodes/control/src/: main.cpp
nodes/lidar/: CMakeLists.txt  main.cpp
nodes/lidar/include/: lidar.hpp  scan_filter.hpp
nodes/lidar/src/: lidar.cpp  main.cpp  scan_filter.cpp
nodes/odometry/: main.cpp
nodes/slam_frontend/: CMakeLists.txt
nodes/slam_frontend/include/: slam_frontend.hpp
nodes/slam_frontend/src/: main.cpp  slam_frontend.cpp
nodes/test/: CMakeLists.txt  main.cpp
nodes/test/src/: main.cpp
python/: control.py  relay.py  visualize.py
python/messages/: LaserScan.py  ScanPoint.py  __init__.py
scans/: scan_20762104202186.pgm  scan_20762239238644.pgm  scan_20762386646999.pgm  scan_20762521686102.pgm  scan_20762669247033.pgm
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt
src/common/include/common/: lcm_node.hpp
src/common/src/: lcm_node.cpp
src/drivers/: CMakeLists.txt
src/drivers/flow/: CMakeLists.txt
src/drivers/flow/include/flow/: flow_driver.hpp
src/drivers/flow/src/: flow_driver.cpp
src/drivers/imu/: CMakeLists.txt
src/drivers/imu/include/imu/: imu_driver.hpp
src/drivers/imu/src/: imu_driver.cpp
src/drivers/lidar/: CMakeLists.txt
src/drivers/lidar/include/lidar/: lidar_driver.hpp
src/drivers/lidar/src/: lidar_driver.cpp  main.cpp
src/drivers/lis3mdl/: CMakeLists.txt
src/drivers/lis3mdl/include/lis3mdl/: lis3mdl_driver.hpp
src/drivers/lis3mdl/src/: lis3mdl_driver.cpp
src/drivers/lsm6dsox/: CMakeLists.txt
src/drivers/lsm6dsox/include/lsm6dsox/: lsm6dsox_driver.hpp
src/drivers/lsm6dsox/src/: lsm6dsox_driver.cpp
src/drivers/motor/: CMakeLists.txt
src/drivers/motor/include/motor/: motor_driver.hpp
src/drivers/motor/src/: motor_driver.cpp
src/html/: index_html.h
src/nodes/: CMakeLists.txt
src/nodes/control/: CMakeLists.txt
src/nodes/control/include/control/: control_node.hpp
src/nodes/control/src/: control_node.cpp  main.cpp
src/nodes/flow/: CMakeLists.txt
src/nodes/flow/include/flow/: flow_node.hpp
src/nodes/flow/src/: flow_node.cpp  main.cpp
src/nodes/imu/: CMakeLists.txt
src/nodes/imu/include/imu/: imu_node.hpp
src/nodes/imu/src/: imu_node.cpp  main.cpp
src/nodes/imu_mag/: CMakeLists.txt
src/nodes/imu_mag/include/imu_mag/: imu_mag_node.hpp
src/nodes/imu_mag/src/: imu_mag_node.cpp  main.cpp
src/nodes/lidar/: CMakeLists.txt
src/nodes/lidar/include/lidar/: lidar_node.hpp
src/nodes/lidar/src/: lidar_node.cpp  main.cpp
src/viz_dashboard/: viz.py
web/: compile.py  index.html
